feat: implement improved song search parameters
